vemo-app/main/default/objects/SandboxSetupUsers__c/SandboxSetupUsers__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SandboxSetup Users</label>
</CustomObject>