vemo-app/main/default/objects/SandboxSetupUsers__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>what to set the user to be in the sandbox</inlineHelpText>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>