vemo-app/main/default/objects/SandboxSetupUsers__c/fields/ProductionUserName__c.field-meta.xml
<CustomField>
    <fullName>ProductionUserName__c</fullName>
    <label>Production User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>