vemo-app/main/default/objects/SandboxSetupUsers__c/fields/ProfileName__c.field-meta.xml
<CustomField>
    <fullName>ProfileName__c</fullName>
    <inlineHelpText>If this value is specified, the user will automatically be set to this profile during SandboxSetup</inlineHelpText>
    <label>Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>