vemo-app/main/default/objects/SandboxSetupUsers__c/fields/ResetEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>ResetEmailAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reset Email Address</label>
    <type>Checkbox</type>
</CustomField>