vemo-app/main/default/objects/SandboxSetupUsers__c/fields/ResetPassword__c.field-meta.xml
<CustomField>
    <fullName>ResetPassword__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reset Password</label>
    <type>Checkbox</type>
</CustomField>