vemo-app/main/default/objects/SandboxSetupUsers__c/fields/RoleName__c.field-meta.xml
<CustomField>
    <fullName>RoleName__c</fullName>
    <inlineHelpText>If this value is supplied, the user will automatically be set to this role</inlineHelpText>
    <label>Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>